[package]
name = "rust-alloy"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11", features = ["full"] }
alloy-primitives = "0.8.21"
alloy-provider = "0.11.1"
anyhow = "1.0.95"
env_logger = "0.11.6"
log = "0.4.25"
opentelemetry = "0.28.0"
opentelemetry-otlp = "0.28.0"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
url = "2.5.4"
warp = "0.3.7"
